1. Update some dependencies 2. Add kapt 3. Fix Dockerfile 4. Update Gradle wrapper