@@ -1,11 +1,13 @@
 buildscript {
     ext {
-        kotlinVer = '1.2.31'
-        springBootVer = '2.0.1.RELEASE'
+        kotlinVer = '1.2.41'
+        springBootVer = '2.0.2.RELEASE'
         kotlinLoggingVer = '1.5.4'
-        reactorCoreVer = '3.1.5.RELEASE'
+        reactorCoreVer = '3.1.7.RELEASE'
+        javaxAnnotationApiVer = '1.3.2'
+        javaxTransactionApiVer = '1.3'
 
-        testContainersVer = '1.6.1-gradle'
+        testContainersVer = '1.7.2'
         jfairyVer = '0.5.9'
 
         propdepsPluginVer = '0.0.10.RELEASE'
@@ -31,6 +33,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'kotlin'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'propdeps'
@@ -52,8 +55,14 @@ dependencies {
     compile 'com.fasterxml.jackson.module:jackson-module-kotlin'
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
+    // compile "javax.annotation:javax.annotation-api:$javaxAnnotationApiVer"
+    // compile "javax.transaction:javax.transaction-api:$javaxTransactionApiVer"
+
     compile 'org.springframework.boot:spring-boot-starter-webflux'
     compile 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+
+    kapt 'org.springframework.boot:spring-boot-configuration-processor'
+    optional 'org.springframework.boot:spring-boot-configuration-processor'
 
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 
@@ -85,6 +94,20 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     }
 }
 
+kapt {
+    useBuildCache = true
+    javacOptions {
+        option("--add-modules", "java.xml.ws.annotation")
+    }
+}
+
+idea {
+    module {
+        sourceDirs += files('build/generated/source/kapt/main', 'build/generated/source/kaptKotlin/main')
+        generatedSourceDirs += files('build/generated/source/kapt/main', 'build/generated/source/kaptKotlin/main')
+    }
+}
+
 bootJar {
     mustRunAfter tasks.clean
     mainClassName = 'app.AppKt'
@@ -102,7 +125,7 @@ test {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.6'
+    gradleVersion = '4.7'
     distributionType = Wrapper.DistributionType.ALL
 }
 
@@ -115,7 +138,7 @@ docker {
     files tasks.bootJar.outputs
     dockerfile file('src/main/docker/Dockerfile')
     buildArgs([
-        JAVA_OPTS: '-XX:-TieredCompilation -XX:MaxRAMFraction=1',
+        JAVA_OPTS: '-XX:-TieredCompilation',
         PORT     : '8080'
     ])
     pull true
